# rpc-server-client

./: CMakeLists.txt  README.md
include/: client.hpp  daemon.hpp
src/: client-main.cpp  client.cpp  daemon-main.cpp  daemon.cpp
